tests/rosetta/out/C/bitmap-histogram.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:43Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:43Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_list_int image() {
  list_int tmp2 = list_int_create(3);
  tmp2.data[0] = 0;
  tmp2.data[1] = 0;
  tmp2.data[2] = 10000;
  list_int tmp3 = list_int_create(3);
  tmp3.data[0] = 65535;
  tmp3.data[1] = 65535;
  tmp3.data[2] = 65535;
  list_int tmp4 = list_int_create(3);
  tmp4.data[0] = 65535;
  tmp4.data[1] = 65535;
  tmp4.data[2] = 65535;
  list_int tmp1_data[] = {tmp2, tmp3, tmp4};
  list_list_int tmp1 = {3, tmp1_data};
  return tmp1;
}

list_int histogram(list_list_int g, int bins) {
  if (bins <= 0) {
    bins = g.data[0].len;
  }
  list_int h = list_int_create(0);
  __auto_type i = 0;
  while (i < bins) {
    int tmp5_data[1];
    list_int tmp5 = {1, tmp5_data};
    tmp5.data[0] = 0;
    list_int tmp6 = concat_list_int(h, tmp5);
    h = tmp6;
    i = i + 1;
  }
  __auto_type y = 0;
  while (y < g.len) {
    __auto_type row = g.data[y];
    __auto_type x = 0;
    while (x < row.len) {
      __auto_type p = row.data[x];
      __auto_type idx = (int)(((p * (bins - 1)) / 65535));
      h.data[idx] = h.data[idx] + 1;
      x = x + 1;
    }
    y = y + 1;
  }
  return h;
}

int medianThreshold(list_int h) {
  __auto_type lb = 0;
  __auto_type ub = h.len - 1;
  __auto_type lSum = 0;
  __auto_type uSum = 0;
  while (lb <= ub) {
    if (lSum + h.data[lb] < uSum + h.data[ub]) {
      lSum = lSum + h.data[lb];
      lb = lb + 1;
    } else {
      uSum = uSum + h.data[ub];
      ub = ub - 1;
    }
  }
  return (int)(((ub * 65535) / h.len));
}

list_list_int threshold(list_list_int g, int t) {
  list_list_int out = {0, NULL};
  __auto_type y = 0;
  while (y < g.len) {
    __auto_type row = g.data[y];
    list_int newRow = list_int_create(0);
    __auto_type x = 0;
    while (x < row.len) {
      if (row.data[x] < t) {
        int tmp7_data[1];
        list_int tmp7 = {1, tmp7_data};
        tmp7.data[0] = 0;
        list_int tmp8 = concat_list_int(newRow, tmp7);
        newRow = tmp8;
      } else {
        int tmp9_data[1];
        list_int tmp9 = {1, tmp9_data};
        tmp9.data[0] = 65535;
        list_int tmp10 = concat_list_int(newRow, tmp9);
        newRow = tmp10;
      }
      x = x + 1;
    }
    list_list_int tmp11 = list_list_int_create(1);
    tmp11.data[0] = newRow;
    list_list_int tmp12 = concat_list_list_int(out, tmp11);
    out = tmp12;
    y = y + 1;
  }
  return out;
}

int printImage(list_list_int g) {
  __auto_type y = 0;
  while (y < g.len) {
    __auto_type row = g.data[y];
    __auto_type line = "";
    __auto_type x = 0;
    while (x < row.len) {
      if (row.data[x] == 0) {
        char *tmp13 = concat_string(line, "0");
        line = tmp13;
      } else {
        char *tmp14 = concat_string(line, "1");
        line = tmp14;
      }
      x = x + 1;
    }
    printf("%s\n", line);
    y = y + 1;
  }
}

int mochi_main() {
  __auto_type img = image();
  __auto_type h = histogram(img, 0);
  char *tmp15 = _str(h);
  char *tmp16 = concat_string("Histogram: ", tmp15);
  printf("%s\n", tmp16);
  __auto_type t = medianThreshold(h);
  char *tmp17 = _str(t);
  char *tmp18 = concat_string("Threshold: ", tmp17);
  printf("%s\n", tmp18);
  __auto_type bw = threshold(img, t);
  printImage(bw);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
